# Rust

./: .gitignore  Rust.code-workspace
11.1.HowToWriteTests/src/: lib.rs
4.1.ownership/src/: main.rs
4.3.FixingErrors/src/: main.rs
Chapter05/5.3.Methods/src/: main.rs
Chapter06/6.1.Defining_Enums/src/: main.rs
Chapter06/6.4.Ownership/src/: main.rs
Chapter15/: Cargo.toml
Chapter15/15.1.Box/src/: main.rs
Chapter15/15.4.Rc_Smart_Pointer/: Cargo.toml
Chapter15/15.5.RefCell/: Cargo.toml
Chapter15/15.6.RC_Leaks/: Cargo.toml
Chapter16/: Cargo.toml
Chapter16/16.1.Using_Threads/: Cargo.toml
Chapter16/16.2.Messages/: Cargo.toml
Chapter16/16.3.SharingState/: Cargo.toml
Chapter16/16.4.SyncSend/: Cargo.toml
Chapter17/: Cargo.toml
Chapter17/17.2.TraitObjects/: Cargo.toml
Chapter17/17.3.OOP_Patterns/: Cargo.toml
Chapter17/17.5.DesignTrades/: Cargo.toml
Chapter18/: Cargo.toml
Chapter18/18.3.Patterns/src/: main.rs
Chapter19/: Cargo.toml
Chapter19/19.1.Unsafe/src/: main.rs
Chapter19/19.5.Macros/: Cargo.toml
Chapter19/19.5.Macros/src/: main.rs
Chapter20/hello/src/: main.rs
RustFrontEnd/: Cargo.toml  index.html  style.css
RustFrontEnd/src/: main.rs
async_http/: Cargo.toml
async_http/src/: lib.rs  main.rs  webcrawl.rs
cli_tool/: Cargo.toml
cli_tool/src/: main.rs
dbloader/: .env  .env.test  Cargo.toml
dbloader/src/: lib.rs  main.rs
dbloader/src/db/: factory.rs
dbloader/src/models/: mod.rs  project.rs  task.rs  task_times.rs  timing.rs
dbloader/src/traits/: model_trait.rs
dbloader/test_data/: b_project_tasks.csv  b_projects.csv  b_task_timings.csv  pgsql_project_tasks.csv  pgsql_projects.csv  pgsql_task_timings.csv
dbloader/tests/: project_task_tests.rs  project_tests.rs  utils.rs
guessing_game/src/: main
hello/src/: main.rs
hello/static/: sleep.html
linfa_test/: Cargo.toml
linfa_test/src/: main.rs
minigrep/src/: lib.rs
mv_loader/: .env  Cargo.toml  projects.db3
mv_loader/migrations/: 20240805032951_Projects.sql  20240805033010_ProjectTasks.sql  20240805033029_TaskTimes.sql  20240811190310_ProjectTasks_AddTime.sql
mv_loader/mv_dbi/: Cargo.toml
mv_loader/mv_dbi/src/: lib.rs  utils.rs
mv_loader/mv_dbi/src/database/: mod.rs  query.rs
mv_loader/mv_dbi/src/model/: mod.rs  project.rs  project_task.rs  task_time.rs
mv_loader/mv_load_csv/: Cargo.toml
mv_loader/mv_load_csv/src/: main.rs  models.rs
mv_loader/test_data/: DisplayGuid.sql  July.xlsx  test_data.csv
rusty/: Cargo.toml
rusty/src/: main.rs
sorting/src/: main.rs  sort_data.rs
sqlite_rusty/: Cargo.toml  sqlite.db
sqlite_rusty/src/: main.rs
traits/src/: main.rs
zcratch/: Cargo.toml
zcratch/src/: factory.rs  main.rs
