[package]
name = "zcratch"
version = "0.1.0"
edition = "2021"

[dependencies]
seq-macro = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "any", "sqlite", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
async-trait = "0.1.80"
