[package]
name = "mv_load_csv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde", "alloc"] }
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "alloc", "formatting", "parsing", "macros"] }
csv = "1.3.0"
getopts = "0.2.21"
